--- a/ls/app/src/main/res/layout/content_my.xml
+++ b/ls/app/src/main/res/layout/content_my.xml
@@ -17,29 +17,36 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="50dp"
-        android:background="#48eea9"
         android:enabled="true"
-        android:clickable="true" />
+        android:clickable="true"
+        android:textSize="22dp" />
 
     <TimePicker
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timePicker2"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btnGetWeather"
         android:clickable="true"
         android:focusable="true"
-        android:timePickerMode="clock" />
+        android:timePickerMode="clock"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="20dp" />
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="false"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_alignParentRight="false"
+        android:singleLine="true"
+        android:shadowColor="#d66262"
+        android:layout_centerHorizontal="true"
+        android:height="300dp" />
 
 </RelativeLayout>
