--- a/ls/app/src/main/res/layout/activity_fullscreen.xml
+++ b/ls/app/src/main/res/layout/activity_fullscreen.xml
@@ -13,15 +13,30 @@
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
+
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MyActivity">
 
 
 
-        </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+            </RelativeLayout>
+
+
+
     </FrameLayout>
 
 </FrameLayout>
